Fix content spacing with title/mentions in dev-challenge

--- a/app/assets/stylesheets/developer-challenge.css
+++ b/app/assets/stylesheets/developer-challenge.css
@@ -22,6 +22,23 @@
   }
 }
 
+/**
+ * Responsive spacing with landing title
+ **/
+.mc__landing--content {
+  margin-bottom: 60px;
+}
+@media(max-width: 991px){
+  .mc__landing--content {
+    margin-top: 45px;
+  }
+}
+@media(max-width: 767px){
+  .mc__landing--content {
+    margin-top -30px;
+  }
+}
+
 #media-coverage .main-nav a {
   color: #fff;
 }
